Major update on replot and other features, See ReadMe for details

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,11 +1,26 @@
-conda {
-  conda.enabled = true
+process {
+  executor = 'slurm'
+  cpus = 4
+  memory = '16GB'
+  time = '2h'
+
+  withLabel: 'process_low' {
+        executor = 'local'
+        cpus = 1
+        memory = '4GB'
+  }
+  
 }
 
-manifest {
-  name = 'gatk_cn'
-  defaultBranch = 'main'
-  description = 'Utilize CNVKit and Python to produce karyotypes from low-coverage WGS reads.'
-  nextflowVersion = '22.04+'
-  author = 'Lu Qiao, Sanat Mishra'
+executor {
+  name = 'slurm'
+  queueSize = 20     // Max number of jobs in the scheduler queue
+  maxSubmit = 20     // Max number of jobs submitted per cycle
+}
+
+conda {
+  enabled = true
+  useMamba = false
+  channels = ['conda-forge', 'bioconda', 'defaults']
+
 }
